# experimental-c-api

./: CMakeLists.txt
include/: public_api.h
src/: internal.hpp  public_api_impl.cpp
tests/: user_app.c  user_lib.c
